# thirdparty-notice-generator

./: LICENSE  README.md  pyproject.toml
src/thirdparty_notice_generator/: __init__.py  __main__.py  template.py
src/thirdparty_notice_generator/base/: __init__.py
src/thirdparty_notice_generator/cargo/: __init__.py
src/thirdparty_notice_generator/licenses/: __init__.py  directory.py  github.py  spdx.py
src/thirdparty_notice_generator/nuget/: __init__.py
src/thirdparty_notice_generator/py/: __init__.py
