[project]
name = "thirdparty-notice-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "futa-t", email = "143526236+futa-t@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
thirdparty-notice-generator = "thirdparty_notice_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
